--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile files('/home/ankit/work/personal/android/SMSMailerPrefs/JavaMail/activation.jar')
+    compile files('/home/ankit/work/personal/android/SMSMailerPrefs/JavaMail/additionnal.jar')
+    compile files('/home/ankit/work/personal/android/SMSMailerPrefs/JavaMail/mail.jar')
 }
