--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ankit.SMSMailerPrefs">
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,14 +17,16 @@
             android:name=".SMSMailerPrefs"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+            <!--
+                <intent-filter>
+                    <action android:name="android.intent.action.MAIN" />
+                    <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
         <activity
-            android:name="com.example.ankit.SMSMailerPrefs.UpdateSenderActivity"
+            android:name=".UpdateSenderActivity"
             android:label="@string/title_activity_update_sender"
             android:parentActivityName=".SMSMailerPrefs"
             android:theme="@style/AppTheme.NoActionBar">
@@ -28,13 +35,49 @@
                 android:value=".SMSMailerPrefs" />
         </activity>
         <activity
-            android:name="com.example.ankit.SMSMailerPrefs.AddReceiverActivity"
+            android:name=".AddReceiverActivity"
             android:label="@string/title_activity_add_receiver"
             android:parentActivityName=".SMSMailerPrefs"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".SMSMailerPrefs" />
+        </activity>
+
+        <receiver android:name=".AutoStart">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <!--
+    <activity android:name=".hello">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+        -->
+
+    <service
+        android:name=".SMSMailerService"
+        android:enabled="true"
+        android:exported="true">
+
+        <!--
+        <intent-filter>
+            <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+        </intent-filter>
+        -->
+        </service>
+
+        <activity android:name=".SMSMailerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
